--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.5.1",
     "@react-native-firebase/app": "^21.12.0",
     "@react-native-firebase/auth": "^21.12.0",
     "@react-native-firebase/database": "^21.12.0",
     "@react-native-firebase/firestore": "^21.12.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
+    "faker": "^6.6.6",
+    "firebase-admin": "^13.1.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-chart-kit": "^6.12.0",
