--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.1",
+    "react-native-shadow-2": "^7.1.1",
     "react-native-svg": "^15.11.2"
   },
   "devDependencies": {
@@ -41,6 +45,7 @@
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
   },
