--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.0.0",
     "react-native": "0.78.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.1",
