--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-firebase/firestore": "^21.12.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
+    "date-fns": "^4.1.0",
     "faker": "^6.6.6",
     "firebase-admin": "^13.1.0",
     "react": "19.0.0",
